fix: prevent horizontal scrolling of document

--- a/compare-table/includes/client.css
+++ b/compare-table/includes/client.css
@@ -52,6 +52,8 @@
     z-index: 2; /* must be higher than info icon */
     width: 0;
     height: 0;
+    left: 0;
+    top: 0;
     opacity: 0;
     visibility: hidden; /* for nice fade-in, but instant fade-out */
     overflow: hidden;
